style changes to appoinmentList

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <!-- debugger for Bulma below -->
-  <link rel="stylesheet" href="styles/debug.css">
+  <!-- <link rel="stylesheet" href="styles/debug.css"> -->
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
