--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <script src="https://kit.fontawesome.com/bc697f9f5a.js" crossorigin="anonymous"></script>
 
   <!-- debugger for Bulma below -->
   <!-- <link rel="stylesheet" href="styles/debug.css"> -->
