Get Progress, styling to AppointList

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <script src="https://kit.fontawesome.com/bc697f9f5a.js" crossorigin="anonymous"></script>
 
-  <!-- debugger for Bulma below -->
+  <!--! debugger for Bulma below -->
   <!-- <link rel="stylesheet" href="styles/debug.css"> -->
 
   <!--
